# experiments

mf-vite/: README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
oxc-nft/: .gitignore  Cargo.toml  README.md  package.json
oxc-nft/src/: lib.rs
oxc-nft/tests/: basic.rs
oxc-rsc/: Cargo.toml  Makefile  README.md  package.json
oxc-rsc/src/: hoist.rs  lib.rs  proxy.rs  proxy_export.rs
oxc-rsc/src/snapshots/: oxc_rsc__hoist__traverse.snap
oxc-rsc/tests/hoist/: arrow.js  arrow.snap  basic.snap  bind.js  bind.snap  function-declaration.js  function-declaration.snap  function-expression.js  function-expression.snap  top.js  top.snap
ppr/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
react-server-dom-vite-example/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
rsbuild-rsc/: README.md  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json  vite.config.ts
rsbuild-ssr/: README.md  package.json  pnpm-lock.yaml  rsbuild.config.ts  vite.config.ts
tanstack-start-rsc/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tsr-rsc/: .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
tsr-rsc-spa/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tsr-rsc-ssr/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
viteroll/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  repro.js  tsconfig.json  vite-6.0.0-beta.8.tgz  vite.config.ts  viteroll-runtime.js  viteroll.ts
vue-server/: .gitignore  (+9 more)
(+309 files in other folders)
