[package]
name = "oxc-rsc"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
oxc = { version = "0.15.0", features = ["transformer", "codegen"] }
oxc_traverse = { version = "0.15.0" }

[dev-dependencies]
base64 = "0.22.1"
insta = { version = "1.39.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
